--- a/TestS/DAC_Test/frdmk64f_pit/.cproject
+++ b/TestS/DAC_Test/frdmk64f_pit/.cproject
@@ -759,4 +759,5 @@
 &lt;/TargetConfig&gt;</projectStorage>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
+	<storageModule moduleId="refreshScope"/>
 </cproject>
